Mobile layout should look correct on mobile. Closes #8

--- a/public/less/application.less
+++ b/public/less/application.less
@@ -262,6 +262,9 @@ h1, h2 {
     width: 320px;
     padding: 0;
   }
+  #ui-container {
+    top: 80px;
+  }
   #question {
     width: 100%;
     #plaque {
